@@ -1,5 +1,11 @@
 
 * Wed Mar 4 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090304 
+- Fixed bug in multi-load case nonlinear analysis in main.c line 410
+... Iteration termination criteria must be reset at the start of each iteration.
+- Change snprintf to sprintf in frame3dd_io.c for DJGPP compatability
+- Added #include <time.h> in nrutil.c for DJGPP compatability
+
+* Wed Mar 4 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090304 
 - Added matrix condensation option to the command line
 - Improved command line interface (now "frame3dd infile outfile" is ok)
 - Improved user-manual.html regarding command-line options with examples
